--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 	<div id="menu">
 		<div id="centerButtons" >
-			<a href="#first"><img id="opa" src="pict/opa.png" class="left"></a>
+			<a href="#first"><img id="logo" src="pict/logo.png" class="left"></a>
 			<div class="left">
 				<a id="aFirst" href="#second" >projekty www</a>
 				<a id="aSecond" href="#third" >projekty DTP</a>
@@ -65,26 +65,9 @@
 	<div id="laptopSliderContainer">
 		<div class="sliderInnerContainer">
 			<div id="laptopSlider">
-				<img src="pict/fundacja_sue_ryder/slide1.jpg" >
-				<img src="pict/fundacja_sue_ryder/slide2.jpg" >
-				<img src="pict/Licowki_Glamsmile/slide1.jpg" >
-				<img src="pict/Licowki_Glamsmile/slide2.jpg" >
-				<img src="pict/PGNiG_Termika/slide1.jpg" >
-				<img src="pict/PGNiG_Termika/slide2.jpg" >
-				<img src="pict/Platforma_n/slide1.jpg" >
-				<img src="pict/Platforma_n/slide2.jpg" >
-	
-				<img src="pict/strona_firmy_derma_profil/slide1.jpg" >
-				<img src="pict/strona_firmy_derma_profil/slide2.jpg" >
-				<img src="pict/strona_firmy_derma_profil/slide3.jpg" >
-				<img src="pict/Strona_marki_Acnaid/slide1.jpg" >
-				<img src="pict/Strona_marki_Acnaid/slide2.jpg" >
-				<img src="pict/Strona_marki_Acnaid/slide3.jpg" >
-				<img src="pict/Strona_marki_Acnaid/slide4.jpg" >
-                <img src="pict/projekty_newsletterow/slide1.jpg" >
-				<img src="pict/projekty_newsletterow/slide2.jpg" >
-				<img src="pict/projekty_newsletterow/slide3.jpg" >
-				<img src="pict/projekty_newsletterow/slide4.jpg" >
+				<img src="pict/slider_1/slide1.jpg" >
+				<img src="pict/slider_1/slide2.jpg" >
+
 				<a href="#" id="laptopSliderLeftDummy" class="slidesjs-previous slidesjs-navigation"></a>
 				<a href="#" id="laptopSliderRightDummy" class="slidesjs-next slidesjs-navigation"></a>
 			</div>
