--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 	</div>
 	
 	<div id="first" class="photo first" data-stellar-background-ratio="0.5">
+    	<img id="baner" src="pict/baner.png" class="centralLayer">
 		<div id="firstText" class="centralLayer">
 			<h1>ŁATA 2014</h1>
 			<h2 class="subtitle white">
