Widok głównej strony

--- a/index.html
+++ b/index.html
@@ -41,26 +41,38 @@
 	</div>
 	
 	<div id="first" class="photo first" data-stellar-background-ratio="0.5">
-    	<img id="baner" src="pict/baner.png" class="centralLayer">
+    	<div id="baner" class="centralLayer">
+	    	<img src="pict/baner.png">
+        </div>
 		<div id="firstText" class="centralLayer">
-			<h1>ŁATA 2014</h1>
-			<h2 class="subtitle white">
-				Łomiankowskie Atrakcje <br>Teatrów Amatorskich 
-			</h2>
-			<div class="normalText">
-				 ŁATA to wyjątkowy przegląd teatralny, stanowiący preteks do spotkania ludzi, dla których teatr jest czymś bardzo ważnym. W tym roku również Melpomena spotka się ze swoimi siostrami w przestrzeni filmu i sztuk plastycznych. Jest to czas, w którym różne konwencje, doświadczenia i odmienne metody pracy przenikają się wzajemnie, a pedagodzy i twórcy teatralni dzielą się z nami swoim doświadczeniem. Ta przestrzeń współpracy i różnorodnej kreacji artystycznej owocuje w twórczości młodych artystów, których gościmy co roku w Domu Kultury w Łomiankach.
-  
-			</div>
-		</div>
-		
-		
-				</div>
-			</div>
-			
-				</div>
-			</div>
-		</div>
-
+        	<div class="column">
+                <h1>ŁATA 2014</h1>
+                <h2 class="subtitle white">
+                    Łomiankowskie Atrakcje <br>Teatrów Amatorskich 
+                </h2>
+                <div class="normalText">
+                     ŁATA to wyjątkowy przegląd teatralny, stanowiący preteks do spotkania ludzi, dla których teatr jest czymś bardzo ważnym. W tym roku również Melpomena spotka się ze swoimi siostrami w przestrzeni filmu i sztuk plastycznych. Jest to czas, w którym różne konwencje, doświadczenia i odmienne metody pracy przenikają się wzajemnie, a pedagodzy i twórcy teatralni dzielą się z nami swoim doświadczeniem. Ta przestrzeń współpracy i różnorodnej kreacji artystycznej owocuje w twórczości młodych artystów, których gościmy co roku w Domu Kultury w Łomiankach.
+                </div>
+            </div>
+            <div class="column">
+            	<h1>&nbsp;</h1>
+                <h2 class="subtitle white">
+                    Zapisy 
+                </h2>
+                <div class="normalText">
+                	<ul>
+                		<li><a href="files/karta uczestnictwa DKŁ ŁATA.pdf"><img src="pict/pobierz.svg">Karta uczestnictwa DKŁ ŁATA</a></li>
+                     	<li><a href="files/regulamin DKŁ ŁATA.pdf"><img src="pict/pobierz.svg">Regulamin DKŁ ŁATA</a></li>
+                     	<li><a href="files/zgoda  DKŁ ŁATA.pdf"><img src="pict/pobierz.svg">Zgoda DKŁ ŁATA</a></li>                     
+                    </ul>
+                </div>            
+            </div>
+            
+            <div class="more">
+            	<a id="aMore" href="#second" >Więcej o Łacie</a>
+            </div>
+            
+		</div>				
 	</div>
 	
 	<div id="laptopSliderContainer">
