--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
 	
 	<div id="first" class="photo first" data-stellar-background-ratio="0.5">
             <div id="firstText" class="centralLayer">
-                <div class="column" style="top: 240px; position: relative;">
+<!--                <div class="column" style="top: 240px; position: relative;">
                     <div class="normalText">
-                            <ul>
-                                    <li><a href="files/karta uczestnictwa DKŁ ŁATA.pdf"><img src="pict/pobierz.svg">Karta uczestnictwa DKŁ ŁATA</a></li>
+                        <ul>
+                            <li><a href="files/karta uczestnictwa DKŁ ŁATA.pdf"><img src="pict/pobierz.svg">Karta uczestnictwa DKŁ ŁATA</a></li>
                             <li><a href="files/regulamin DKŁ ŁATA.pdf"><img src="pict/pobierz.svg">Regulamin DKŁ ŁATA</a></li>
                             <li><a href="files/zgoda  DKŁ ŁATA.pdf"><img src="pict/pobierz.svg">Zgoda DKŁ ŁATA</a></li>                     
                         </ul>
                     </div>            
-                </div>
+                </div>-->
             
+                    <a id="aMore" href="#second" ></a>
                 <div class="more">
-                    <a id="aMore" href="#second" >Więcej o Łacie</a>
                 </div>
             
             </div>				
@@ -77,94 +77,93 @@
 		</div>
 	</div>-->
 	
-	<div id="second" class="centralLayer panel">
+	<div id="second" class="centralLayer">
                 <div class="column">
                     <h1>
                         Łomiankowskie Atrakcje Teatrów Amatorskich<br>
                         ŁATA 2014
                     </h1>
                     <div>
-Zapraszamy serdecznie na kolejną edycję Łomiankowskich Artakcji Teatrów Amatorskich ŁATA 2014. Będzie nam towarzyszył Pan Ernest Bryll i jego poezja. Grupy teatralne oprócz prezentacji swoich spektakli będą miały możliwość uczestniczenia w wyjątkowych warsztatach filmowych oraz nietypowym wernisażu.
+Zapraszamy serdecznie na kolejną edycję Łomiankowskich Artakcji Teatrów Amatorskich ŁATA 2014. Będzie nam towarzyszył Pan Ernest Bryll i jego poezja. Grupy teatralne oprócz prezentacji swoich spektakli będą miały możliwość uczestniczenia w wyjątkowych warsztatach filmowych oraz nietypowym wernisażu.<br><br>
 
 ŁATA to wyjątkowy przegląd teatralny, stanowiący pretekst do spotkania ludzi, dla których teatr jest czymś bardzo ważnym. W tym roku również Melpomena spotka się ze swoimi siostrami w przestrzeni filmu i sztuk plastycznych. Jest to czas, w którym różne konwencje, doświadczenia i odmienne metody pracy przenikają się wzajemnie, a pedagodzy i twórcy teatralni dzielą się z nami swoim doświadczeniem. Ta przestrzeń współpracy i różnorodnej kreacji artystycznej owocuje w twórczości młodych artystów, których gościmy co roku w Domu Kultury w Łomiankach.
 
 
 <h2>„ŁATA 2014” - regulamin</h2>
 
-I. Przegląd jest organizowany w dniu 28 kwietnia 2014 r. przez Dom Kultury w Łomiankach.
-Tegoroczna edycja ŁATY będzie się składała z kilku części:
-- prezentacji spektakli od godz. 10.00
-- warsztatów teatralno-filmowych z zakresu animacji poklatkowej (należy zadeklarować chęć uczestnictwa zespołu w warsztatach, czas warsztatów ok. 3 godz.)
-- wernisażu malarstwa Pani Basi Raszewskiej
-- prezentacji wyników pracy uczestników warsztatów
-- uroczystego wręczenia nagród „ŁATA 2014” (ok. godz. 19.00)
+<h3>I. Przegląd jest organizowany w dniu 28 kwietnia 2014 r. przez Dom Kultury w Łomiankach.</h3>
+Tegoroczna edycja ŁATY będzie się składała z kilku części:<br>
+- prezentacji spektakli od godz. 10.00<br>
+- warsztatów teatralno-filmowych z zakresu animacji poklatkowej (należy zadeklarować chęć uczestnictwa zespołu w warsztatach, czas warsztatów ok. 3 godz.)<br>
+- wernisażu malarstwa Pani Basi Raszewskiej<br>
+- prezentacji wyników pracy uczestników warsztatów<br>
+- uroczystego wręczenia nagród „ŁATA 2014” (ok. godz. 19.00)<br>
 
-II. Cele Przeglądu:
-- przeżycie przez uczestników inspirującej przygody z teatrem i nawiązanie nowych przyjaźni
-- konfrontacja dokonań teatrów dziecięcych i młodzieżowych
-- inspirowanie do twórczych, radosnych poszukiwań nowych środków wyrazu
-- rozwijanie świadomości scenicznej
-- możliwość wymiany doświadczeń artystycznych
-- poznanie nowych technik multimedialnych
+<h3>II. Cele Przeglądu:</h3>
+- przeżycie przez uczestników inspirującej przygody z teatrem i nawiązanie nowych przyjaźni<br>
+- konfrontacja dokonań teatrów dziecięcych i młodzieżowych<br>
+- inspirowanie do twórczych, radosnych poszukiwań nowych środków wyrazu<br>
+- rozwijanie świadomości scenicznej<br>
+- możliwość wymiany doświadczeń artystycznych<br>
+- poznanie nowych technik multimedialnych<br>
 
-III. Warunki uczestnictwa:
-1. W Przeglądzie mogą wziąć udział teatry dziecięce i młodzieżowe (żywego planu, lalkowe, kabaretowe, poezji i obrzędowe)
-2. Czas trwania widowiska maksymalnie 30 min. (w wypadku dłuższych form scenicznych należy zaprezentować ich fragment)
-3. Czas rozstawiania scenografii nie powinien przekroczyć 10 min.
+<h3>III. Warunki uczestnictwa:</h3>
+1. W Przeglądzie mogą wziąć udział teatry dziecięce i młodzieżowe (żywego planu, lalkowe, kabaretowe, poezji i obrzędowe)<br>
+2. Czas trwania widowiska maksymalnie 30 min. (w wypadku dłuższych form scenicznych należy zaprezentować ich fragment)<br>
+3. Czas rozstawiania scenografii nie powinien przekroczyć 10 min.<br>
 4. Zaproszone teatry dostarczają czytelnie wypełnioną kartę zgłoszenia do 16.04.2014 włącznie w jeden
-z poniżej wymienionych sposobów:
-- osobiście/listownie na adres Dom Kultury w Łomiankach, 05-092 Łomianki ul. Wiejska 12a
-- lub skan wypełnionych dokumentów drogą elektroniczną na adres email anna.bak@kultura.lomianki.pl (w tytule prosimy wpisać „ŁATA 2014”)
-5. O zakwalifikowaniu zespołu teatralnego i godzinie występu poinformujemy Państwa do 18.04.2014 r. włącznie.
-6. Dostarczenie zgód na wykorzystanie wizerunku wszystkich uczestników przeglądu w materiałach promujących Łomiankowskie Atrakcje Teatrów Amatorskich (najpóźniej w dniu przeglądu)
+z poniżej wymienionych sposobów:<br>
+- osobiście/listownie na adres Dom Kultury w Łomiankach, 05-092 Łomianki ul. Wiejska 12a<br>
+- lub skan wypełnionych dokumentów drogą elektroniczną na adres email anna.bak@kultura.lomianki.pl (w tytule prosimy wpisać „ŁATA 2014”)<br>
+5. O zakwalifikowaniu zespołu teatralnego i godzinie występu poinformujemy Państwa do 18.04.2014 r. włącznie.<br>
+6. Dostarczenie zgód na wykorzystanie wizerunku wszystkich uczestników przeglądu w materiałach promujących Łomiankowskie Atrakcje Teatrów Amatorskich (najpóźniej w dniu przeglądu)<br>
 
-IV. Organizatorzy zapewniają zespołom:
-- obsługę techniczną widowiska (profesjonalnie wyposażoną salę widowiskową i miejsce na przygotowanie się do występu)
-- indywidualne konsultacje z jurorami przeglądu
-- poczęstunek (ciepłe zupy, kanapki, słodycze, kawa, herbata)
-- możliwość uczestniczenia w warsztatach teatralno-filmowych prowadzonych przez profesjonalną ekipę animatorów złożoną z absolwentów Szkoły Filmowej w Łodzi i jurorów
-- możliwość aktywnego uczestniczenia w nietypowym wernisażu
-- otrzymanie po przeglądzie płyt CD z utrwalonym przebiegiem przeglądu teatralnego oraz filmami stworzonymi przez uczestników warsztatów animacji poklatkowej organizowanych w ramach ŁATY
-- otrzymanie przez każdy zespół niepowtarzalnego dyplomu „ŁATA 2014” oraz nagród rzeczowych
-- atmosferę niezapomnianej, twórczej zabawy teatralnej
+<h3>IV. Organizatorzy zapewniają zespołom:</h3>
+- obsługę techniczną widowiska (profesjonalnie wyposażoną salę widowiskową i miejsce na przygotowanie się do występu)<br>
+- indywidualne konsultacje z jurorami przeglądu<br>
+- poczęstunek (ciepłe zupy, kanapki, słodycze, kawa, herbata)<br>
+- możliwość uczestniczenia w warsztatach teatralno-filmowych prowadzonych przez profesjonalną ekipę animatorów złożoną z absolwentów Szkoły Filmowej w Łodzi i jurorów<br>
+- możliwość aktywnego uczestniczenia w nietypowym wernisażu<br>
+- otrzymanie po przeglądzie płyt CD z utrwalonym przebiegiem przeglądu teatralnego oraz filmami stworzonymi przez uczestników warsztatów animacji poklatkowej organizowanych w ramach ŁATY<br>
+- otrzymanie przez każdy zespół niepowtarzalnego dyplomu „ŁATA 2014” oraz nagród rzeczowych<br>
+- atmosferę niezapomnianej, twórczej zabawy teatralnej<br>
 
-V. Jury będzie oceniać spektakle według kryteriów:
-- dobór repertuaru
-- opracowanie dramaturgiczne i reżyserskie
-- ogólny wyraz artystyczny
+<h3>V. Jury będzie oceniać spektakle według kryteriów:</h3>
+- dobór repertuaru<br>
+- opracowanie dramaturgiczne i reżyserskie<br>
+- ogólny wyraz artystyczny<br>
 
-VI. Jurorami przeglądu „ŁATA 2014” będą*:
-Ernest Bryll
+<h3>VI. Jurorami przeglądu „ŁATA 2014” będą*:</h3>
+<h4>Ernest Bryll</h4>
 Przewodniczący jury i gość specjalny przeglądu „ŁATA 2014”.
 Poeta, pisarz, dziennikarz i tłumacz. Absolwent wydziału Filologii Polskiej Uniwersytetu Warszawskiego (1957). Oprócz działalności na niwie literatury i mediów, w latach 1991-95 był Ambasadorem Rzeczpospolitej w Republice Irlandii. Był także członkiem redakcji pism społeczno - kulturalnych. Przez wiele lat był krytykiem filmowym, pracował jako kierownik literacki teatru TV, oraz jako szef lub kierownik literacki kilku zespołów filmowych, autor audycji telewizyjnych dotyczących kultury, licznych tomików poezji, sztuk scenicznych, oratoriów, musicali i programów telewizyjnych. Tłumacz z języka irlandzkiego, czeskiego, jidish.
 
-Natalia Leszczyńska
+<h4>Natalia Leszczyńska</h4>
 Aktorka, lalkarka, opowiadaczka. Prowadzi autorską audycję w Radio Bajka, gdzie na antenie na żywo wymyśla bajki razem ze słuchaczami. Swoje badania dotyczące metodologii opowiadania i zbierania baśni prowadzi w ramach Ma Fundacji. Poszukuje na styku teatru, rytuału i sztuki akcji, która dociera do małych i dużych tak, by mówić o sprawach najważniejszych w sposób najprostszy i magiczny zarazem.
 
-Anna Kaźmierowska
+<h4>Anna Kaźmierowska</h4>
 Absolwentka Akademii Teatralnej im. Aleksandra Zelwerowicza w Warszawie, Wydziału Sztuki Lalkarskiej w Białymstoku, Akademii Filmu i Telewizji w Warszawie oraz Szkoły Muzycznej II Stopnia w Toruniu. Zagrała w kilkunastu spektaklach teatralnych, m.in. „Jak ty nic nie rozumiesz” w Teatrze Palladium” „Justyna, siostra mojej”, „O innych sposobach…” w Teatrze Akademia „Hamelin”, „Pan Andersen na Pradze” w Teatrze Wytwórnia. Od kilku lat prowadzi warsztaty teatralne dla dzieci, młodzieży i dorosłych. Współpracuje z fundacją de facto, w ramach której zrealizowała słuchowisko z dziećmi niewidomymi. Prelegent w kinie Muranów. Obecnie pracuje w Fundacji „Pomysły na sztuki”, Stowarzyszeniu Teatr Per Se oraz w Płockim Ośrodku Kultury i Sztuki na stanowisku instruktor teatralny.
 
-Informacje:
+<h4>Informacje:</h4>
 Szczegółowe informacje są udzielane przez pracowników Domu Kultury w Łomiankach oraz dostępne
 na stronie www.kultura.lomianki.pl
 
-Adres: Dom Kultury w Łomiankach, ul. Wiejska 12a, 05-092 Łomianki
-tel. 22 751 35 02, 509 482 637, 503 575 123, fax 22 292 69 83
+<h4>Adres:</h4>
+Dom Kultury w Łomiankach, ul. Wiejska 12a, 05-092 Łomianki<br>
+tel. 22 751 35 02, 509 482 637, 503 575 123, fax 22 292 69 83<br>
 e-mail: dk@kultura.lomianki.pl
 
-Koordynator projektu: Anna Bąk tel. 797 195 048,
-anna.bak@kultura.lomianki.pl
+<h4>Koordynator projektu:</h4>
+Anna Bąk tel. 797 195 048,<br>
+anna.bak@kultura.lomianki.pl<br>
 
 
-Dokumenty do pobrania:
+<h4>Dokumenty do pobrania:</h4>
 
-karta zgłoszenia zespołu (pdf)
-karta zgłoszenia zespołu (doc)
-
-zgoda na wykorzystanie wizerunku (pdf)
-
-regulamin (pdf)
-
+<a href="files/karta uczestnictwa DKŁ ŁATA.pdf">karta zgłoszenia zespołu (pdf)</a><br>
+<a href="files/karta uczestnictwa DKŁ ŁATA.doc">karta zgłoszenia zespołu (doc)</a><br>
+<a href="files/zgoda  DKŁ ŁATA.pdf">zgoda na wykorzystanie wizerunku (pdf)</a><br>           
+<a href="files/regulamin DKŁ ŁATA.pdf">regulamin (pdf)</a><br><br>
 
 * skład jury może ulec zmianie z przyczyn niezależnych od organizatorów                        
                     </div>
