Poprawki w HTMLu, zakomentowanie galerii

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                             <a id="aFirst" href="#second" >ZGŁOŚ ZESPÓŁ</a>
                             <a id="aSecond" href="#third" >NOWA ŁATA</a>
                             <a id="aThird" href="#fourth" >IDEA</a>
-                            <a id="aFourth" href="#fifth" >STARE ŁATY</a>
-                            <a id="aFifth" href="#sixth" >ŁATA TV</a>
+<!--                            <a id="aFourth" href="#fifth" >STARE ŁATY</a>
+                            <a id="aFifth" href="#sixth" >ŁATA TV</a>-->
                             <a id="aSeventh" class="last" href="#seventh" >KONTAKT</a>
                     </div>
             </div>
@@ -112,14 +112,13 @@ zaprezentować ich fragment). Zaproszone teatry dostarczają czytelnie wypełnio
                 <h2>wernisaż malarstwa Basi Raszewskiej</h2>
                 W trakcie tegorocznej ŁATY 2014 odbędzie się wernisaż malarstwa Basi Raszewskiej - artystki mieszkającej w Łomiankach. Prezentowane na wystawie towarzyszącej przeglądowi teatralnemu prace powstały pod wpływem pobytu w Australii, gdzie Pani Basia zetknęła się ze sztuką Aborygenów i bardzo nowoczesną architekturą. Tworzy obrazy z barwnych kropek układających się w bardzo ciekawe, uporządkowane wzory. <br><br>
                   Atrakcją wernisażu będzie premiera filmu "Kolorowe punkty zwrotne"  zrealizowanego przez Anię Chmielewską (l. 15) w nowej pracowni komputerowej DKŁ. Film w sposób bardzo atrakcyjny przybliży barwną postać artystki.   
-                </div>  </div>
-                     </div>
+            </div>
             <div class="clear"></div>            
             
             <div class="leftWideCol">
                 <h2>prezentacja wyników pracy uczestników warsztatów</h2>
                 W czasie warsztatów teatralno-filmowych prowadzonych w trakcie ŁATY 2014 zostanie zarejestrowany materiał video, na podstawie którego powstaną 4 etiudy animowane metodą poklatkową. Przed rozdaniem tegorocznych nagród będziemy się starali zaprezentować Państwu "surowy", niezmontowany materiał filmowy stanowiący efekt pracy uczestników warsztatów. Pełne wersje etiud zostaną wysłane do uczestników warsztatów wraz z zapisem video przebiegu przeglądu.
-                           </div>
+            </div>
             <img src="pict/5.jpg" class="rightNarrowCol">
             <div class="clear"></div>                
             
@@ -138,7 +137,7 @@ zaprezentować ich fragment). Zaproszone teatry dostarczają czytelnie wypełnio
             W Łomiankowskich Atrakcjach Teatrów Amatorskich ŁATA biorą co roku udział teatry dziecięce i młodzieżowe wyrażające się poprzez bardzo zróżnicowane środki formalne, dzięki czemu uczestnicy przeglądu mają możliwość wzajemnego inspirowania się. Dzięki indywidualnym konsultacjom z profesjonalistami, zespoły otrzymują cenne wskazówki, dzięki którym mogą rozwijać się we właściwym kierunku.           
 	</div>
 	
-       <div id="fifth" class="centralLayer panel">
+<!--       <div id="fifth" class="centralLayer panel">
             <div class="centralLayer stdSize">
                 <h1>Stare ŁATY</h1>
                 ŁATA to wyjątkowy, pozbawiony atmosfery stresującej rywalizacji przegląd teatralny, stanowiący pretekst do inspirujących spotkań ludzi, dla których teatr jest czymś bardzo ważnym. Również w tym roku Melpomena spotka się ze swoimi siostrami w przestrzeni filmu i sztuk plastycznych.Będzie to czas przenikania się różnych konwencji i odmiennych metod pracy. Ta przestrzeń współpracy i różnorodnej kreacji artystycznej znacząco wpływa na twórczość młodych artystów, których  co roku  gościmy w Domu Kultury w Łomiankach.   
@@ -219,10 +218,10 @@ zaprezentować ich fragment). Zaproszone teatry dostarczają czytelnie wypełnio
                     </div>
                 </div>
             </div>
-        </div>               
+        </div>  -->             
 
 
-        <div id="sixth" class="centralLayer panel">
+<!--        <div id="sixth" class="centralLayer panel">
             <div class="centralLayer stdSize">
                 <h1>ŁATA TV</h1>
                 ŁATA to wyjątkowy, pozbawiony atmosfery stresującej rywalizacji przegląd teatralny, stanowiący pretekst do inspirujących spotkań ludzi, dla których teatr jest czymś bardzo ważnym. Również w tym roku Melpomena spotka się ze swoimi siostrami w przestrzeni filmu i sztuk plastycznych.Będzie to czas przenikania się różnych konwencji i odmiennych metod pracy. Ta przestrzeń współpracy i różnorodnej kreacji artystycznej znacząco wpływa na twórczość młodych artystów, których  co roku  gościmy w Domu Kultury w Łomiankach.
@@ -278,7 +277,7 @@ zaprezentować ich fragment). Zaproszone teatry dostarczają czytelnie wypełnio
                     </div>
                 </div>
             </div>         
-        </div>        
+        </div> -->       
 
         <div id="seventh" class="centralLayer panel stdSize">
             <h1>Kontakt</h1>
