poprawiony link poklatkowo.pl

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ zaprezentować ich fragment). Zaproszone teatry dostarczają czytelnie wypełnio
                 <h2>warsztaty teatralno-filmowe</h2>
                 W tym roku przygotowaliśmy dla uczestników ŁATY wyjątkową niespodziankę! Po prezentacji spektakli przygotowanych przez zespoły rozpoczniemy warsztaty prowadzone przez poklatkowo.pl na czele z Magdą Bryll i Martą Stróżycką.
                 <br><br>
-                Stworzymy niepowtarzalne, krótkometrażowe filmy animowane z pogranicza sztuk plastycznych i teatru. Każdy z uczestników będzie mógł wcielić się w rolę reżysera, scenografa oraz animatora. Zachęcamy do obejrzenia filmów zrealizowanych przez ekipę poklatkowo.pl, które mogą stanowić inspirację dla uczestników warsztatów przeprowadzonych podczas ŁATY 2014. Filmy są dostępne na stronie:  <a href="poklatkowo.pl">www.poklatkowo.pl</a>
+                Stworzymy niepowtarzalne, krótkometrażowe filmy animowane z pogranicza sztuk plastycznych i teatru. Każdy z uczestników będzie mógł wcielić się w rolę reżysera, scenografa oraz animatora. Zachęcamy do obejrzenia filmów zrealizowanych przez ekipę poklatkowo.pl, które mogą stanowić inspirację dla uczestników warsztatów przeprowadzonych podczas ŁATY 2014. Filmy są dostępne na stronie:  <a href="http://poklatkowo.pl/">poklatkowo.pl</a>
                 <br><br>
                 <h3>Magda Bryll</h3>
                 Absolwentka Łódzkiej Filmówki, ilustratorka książek, organizuje warsztaty w kraju i zagranicą, pracowała przy Oskarowym „Piotrusiu i Wilku”. Artystka specjalizuje się w warsztatach klasycznej animacji filmowej dla małych i dużych (wykorzystuje wszystkie techniki animacji m.in. wycinankę, lalkę, piasek).
