Włączony panel Łata TV

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                             <a id="aFirst" href="#second" >ZGŁOŚ ZESPÓŁ</a>
                             <a id="aSecond" href="#third" >NOWA ŁATA</a>
                             <a id="aThird" href="#fourth" >IDEA</a>
-<!--                            <a id="aFourth" href="#fifth" >STARE ŁATY</a>
-                            <a id="aFifth" href="#sixth" >ŁATA TV</a>-->
+<!--                            <a id="aFourth" href="#fifth" >STARE ŁATY</a>-->
+                            <a id="aFifth" href="#sixth" >ŁATA TV</a>
                             <a id="aSeventh" class="last" href="#seventh" >KONTAKT</a>
                     </div>
             </div>
@@ -222,7 +222,7 @@ zaprezentować ich fragment). Zaproszone teatry dostarczają czytelnie wypełnio
         </div>  -->             
 
 
-<!--        <div id="sixth" class="centralLayer panel">
+        <div id="sixth" class="centralLayer panel">
             <div class="centralLayer stdSize">
                 <h1>ŁATA TV</h1>
                 ŁATA to wyjątkowy, pozbawiony atmosfery stresującej rywalizacji przegląd teatralny, stanowiący pretekst do inspirujących spotkań ludzi, dla których teatr jest czymś bardzo ważnym. Również w tym roku Melpomena spotka się ze swoimi siostrami w przestrzeni filmu i sztuk plastycznych.Będzie to czas przenikania się różnych konwencji i odmiennych metod pracy. Ta przestrzeń współpracy i różnorodnej kreacji artystycznej znacząco wpływa na twórczość młodych artystów, których  co roku  gościmy w Domu Kultury w Łomiankach.
@@ -230,9 +230,11 @@ zaprezentować ich fragment). Zaproszone teatry dostarczają czytelnie wypełnio
             <div class="sliderContainer tv">
                 <div class="sliderInnerContainer">
                     <div id="sixthSlider" class="slider sliderTV">
-                            <iframe width="700" height="394" src="http://www.youtube.com/embed/X0i2ytlJghE" frameborder="0" allowfullscreen></iframe>
-                            <iframe width="700" height="394" src="http://www.youtube.com/embed/XyP1yfpgO28" frameborder="0" allowfullscreen></iframe>
-                            <iframe width="700" height="394" src="http://www.youtube.com/embed/JAM6yojkDa4" frameborder="0" allowfullscreen></iframe>
+                            <iframe width="700" height="394" src="//www.youtube.com/embed/IciM0ruYyuE?rel=0" frameborder="0" allowfullscreen></iframe>
+<!--                            <iframe width="700" height="394" src="//www.youtube.com/embed/andV2tr-z8U?rel=0" frameborder="0" allowfullscreen></iframe>-->
+                            <iframe width="700" height="394" src="//www.youtube.com/embed/H0G1en9d4i0?rel=0" frameborder="0" allowfullscreen></iframe>
+                            <iframe width="700" height="394" src="//www.youtube.com/embed/andV2tr-z8U?rel=0" frameborder="0" allowfullscreen></iframe>
+                            <iframe width="700" height="394" src="//www.youtube.com/embed/Vsas4J-cPEQ?rel=0" frameborder="0" allowfullscreen></iframe>
                             
                             <a href="#" class="slidesjs-previous slidesjs-navigation"></a>
                             <a href="#" class="slidesjs-next slidesjs-navigation"></a>
@@ -258,27 +260,32 @@ zaprezentować ich fragment). Zaproszone teatry dostarczają czytelnie wypełnio
                                 </svg>
                                 <svg class="paginationRect unselectedRectBright" width="25" height="25" onclick="pageClick(this);">
                                     <rect x="0" y="0" width="25" height="25"/>
-                                </svg>                                                  
+                                </svg>
+                                <svg class="paginationRect unselectedRectBright" width="25" height="25" onclick="pageClick(this);">
+                                    <rect x="0" y="0" width="25" height="25"/>
+                                </svg>
                             </div>
                         </h1>
                         <div class="descriptions">
                             <div>
-                                <h2>Leonor Fini</h2>
-                                Propozycja animacji sygnatury Leonor Fini wykonana dla Muzeum Literatury w Warszawie w syntetyczny sposób obrazująca ideę artystki przedstawiającej się jako "kobieta-kot".
+                                <h2>ŁATA 2014 relacja wideo w pigułce</h2>
+<!--                                Propozycja animacji sygnatury Leonor Fini wykonana dla Muzeum Literatury w Warszawie w syntetyczny sposób obrazująca ideę artystki przedstawiającej się jako "kobieta-kot".-->
+                            </div>
+
+                            <div class="hidden">
+                                <h2>ŁATA 2014: "Kolorowa ŁATA" - film z warsztatów w Domu Kultury w Łomiankach</h2>
                             </div>
                             <div class="hidden">
-                                <h2>Warsztaty Świat Animacji </h2>
-                                Film zrealizowany w ramach warsztatów animacji komputerowej "Warsztaty Świat Animacji" (2010 r.) w Filii Domu Kultury w Łomiankach. Uczestnicy warsztatów mieli za zadanie stworzyć swoją autorską historię i zobrazować ją poprzez zrobienie z papieru, włóczki itp. prac plastycznych, z których w kolejnym etapie tworzyli komputerową animację poklatkową. Całość projektu uzupełnił montaż dźwięków nagranych przez dzieci.
+                                <h2>ŁATA 2014: "Cyrk" - film z warsztatów w Domu Kultury w Łomiankach</h2>
                             </div>
                             <div class="hidden">
-                                <h2>Film animowany "Ogród"</h2>
-                                Projekt zakładał wykorzystanie technik multimedialnych w rozwijaniu kreatywności dzieci i młodzieży uczestniczącej w zajęciach Domu Kultury w Łomiankach (filia w Burakowie). Dzieci wykonywały prace plastyczne w różnych technikach, skanowały je, uczyły się w jaki sposób przetworzyć je komputerowo na potrzeby animacji a następnie nagrywały podkład dźwiękowy i poznawały podstawy montażu filmowego.
+                                <h2>ŁATA 2014: "Kolorowe punkty zwrotne" - film z warsztatów w Domu Kultury w Łomiankach</h2>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>         
-        </div> -->       
+        </div>
 
         <div id="seventh" class="centralLayer panel stdSize">
             <h1>Kontakt</h1>
